backup_individuals/sjeng/use_undefined_identifier/c1/s_king_mobility
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/s_king_mobility/src/seval.c:566:52: error: use of undeclared identifier 'jpt_404015'
v1 += board[square + ( __int64)*( int *)( ( char *)jpt_404015 + v2)] == 13; 
                                                   ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/s_king_mobility/src/obj/seval.o] Error 1
